--- a/index.html
+++ b/index.html
@@ -527,9 +527,8 @@
             <p class="muted">Add your real links below when you’re ready.</p>
 
             <div class="contact-list">
-              <div><strong>Email:</strong> <span class="muted">ahc@tamu.edu (placeholder)</span></div>
-              <div><strong>Instagram:</strong> <span class="muted">@AggieHealthCollaborative (placeholder)</span></div>
-              <div><strong>Meetings:</strong> <span class="muted">2×/month (room TBD)</span></div>
+              <div><strong>Email:</strong> <span class="muted">ahctamu@gmail.com</span></div>
+              <div><strong>Interest Meeting:</strong> <span class="muted">Tuesday January 20, 2026</span></div>
             </div>
 
             <hr class="sep" />
