--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#top" aria-label="Aggie Health Collaborative home">
-        <span class="brand-mark" aria-hidden="true">AHC</span>
+        <img src="logo.svg" alt="Aggie Health Collaborative logo" class="brand-logo" />
         <span class="brand-text">
           <span class="brand-title">Aggie Health Collaborative</span>
           <span class="brand-sub">Healthcare • Environmental Health • Technology</span>
         </span>
       </a>
+
 
       <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="siteNav">
         <span class="sr-only">Toggle navigation</span>
