--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#top" aria-label="Aggie Health Collaborative home">
-        <img src="logo.svg" alt="Aggie Health Collaborative logo" class="brand-logo" />
+        <img src="logo.png" alt="Aggie Health Collaborative logo" class="brand-logo" />
         <span class="brand-text">
           <span class="brand-title">Aggie Health Collaborative</span>
           <span class="brand-sub">Healthcare • Environmental Health • Technology</span>
